# fps

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  environment-dev.yml  fps.toml  fps_cli_args.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/workflows/: check-release.yml  ci.yml  lint.yml  prep-release.yml  publish.yml  test.yml
api_reference/: index.html
docs/: api_reference.md  guide.md  index.md  install.md
fps/: __init__.py  _version.py  api.py  app.py  cli.py  config.py  hooks.py  logging.py  main.py  plugins.py  utils.py
fps-old/: CHANGELOG.md  MANIFEST.in  RELEASING.md  fps.toml
fps-old/fps/: config.py  errors.py  exceptions.py  logging.py  main.py
fps-old/fps/testing/: README.md  fixtures.py
fps-old/plugins/helloworld/: README.md  pyproject.toml
fps-old/plugins/helloworld/tests/: conftest.py
fps-old/plugins/uvicorn/: CHANGELOG.md  pyproject.toml
fps-old/plugins/uvicorn/fps_uvicorn/: cli.py  config.py
fps-old/tests/: test_config.py
fps/testing/: README.md  fixtures.py
guide/: index.html
install/: index.html
plugins/dashboard/: CHANGELOG.md  LICENSE  README.md  setup.cfg
plugins/dashboard/fps_dashboard/: __init__.py  cli.py  config.py  dashboard.py
plugins/helloworld/: README.md  setup.cfg  setup.py
plugins/helloworld/fps_helloworld/: config.py  exceptions.py  routes.py
plugins/helloworld/helloworld/: main.py
plugins/helloworld/tests/: conftest.py  test_routes.py
plugins/uvicorn/: README.md  pyproject.toml  setup.cfg
plugins/uvicorn/fps_uvicorn/: __init__.py  cli.py  config.py
search/: search_index.json
some/: setup.py
some/some/: cli.py  main.py
src/fastaio/: __init__.py  _cli.py  _component.py  _config.py  _context.py  _importer.py  _module.py
src/fastaio/web/: fastapi.py
src/fps/: __init__.py  _cli.py  _config.py  _container.py  _context.py  _importer.py  _module.py  _signal.py
src/fps/cli/: _cli.py
src/fps/web/: fastapi.py  server.py
tests/: conftest.py  test_cli.py  test_component.py  test_config.py  test_context.py  test_exceptions.py  test_module.py  test_resource.py  test_signal.py  test_start_stop.py  test_tasks.py  test_value.py  test_web.py
