[metadata]
name = fps
version = attr: fps._version.__version__
description = A pluggable server
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Adrien DELSALLE
author_email = adrien.delsalle@quantstack.net
url = https://github.com/adriendelsalle/fps
platforms = Linux, Mac OS X
keywords = server, fastapi, pluggy, pluggins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fastapi
  typer
  uvicorn
  toml
  pluggy
  pyyaml

[options.entry_points]
console_scripts =
    fps = fps.cli:app