[metadata]
name = fps
version = attr: fps._version.__version__
description = A pluggable server
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Adrien DELSALLE
author_email = adrien.delsalle@quantstack.net
url = https://github.com/adriendelsalle/fps
platforms = Windows, Linux, Mac OS X
keywords = server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  toml
  fastapi
  typer
  uvicorn
  pluggy~=1.0.0.dev0

[options.entry_points]
console_scripts =
    fps = fps.cli:app
