[metadata]
name = fps
version = attr: fps.__init__.__version__
description = A pluggable server
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter-server/fps
platforms = Windows, Linux, Mac OS X
keywords = asgi, server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  toml
  fastapi
  pluggy>=1.0,<2.0
  typer[all]

[options.extras_require] 
uvicorn =
  fps-uvicorn
