[metadata]
name = fps_dashboard
version = attr: fps_dashboard._version.__version__
description = A dashboard plugin for FPS
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/jupyter-server/fps
platforms = Windows, Linux, Mac OS X
keywords = server, fastapi, pluggy, plugins, fps, rich

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fps-uvicorn
  rich
  textual

[options.entry_points]
fps_config =
    fps_dashboard_config = fps_dashboard.config

console_scripts =
    fps-dashboard = fps_dashboard.cli:app
