[metadata]
name = fps_helloworld
version = attr: fps_helloworld._version.__version__
description = A plugin demo for FPS
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Adrien DELSALLE
author_email = adrien.delsalle@quantstack.net
url = https://github.com/adriendelsalle/fps
platforms = Windows, Linux, Mac OS X
keywords = server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fps

[options.entry_points]
fps =
    fps-helloworld = fps_helloworld.main

console_scripts =
    helloworld = fps.cli:app
