[metadata]
name = fps_uvicorn
version = attr: fps_uvicorn.__init__.__version__
description = A uvicorn plugin for FPS
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter-server/fps
platforms = Windows, Linux, Mac OS X
keywords = server, fastapi, pluggy, plugins, fps, uvicorn

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
  
install_requires =
  fps
  uvicorn

[options.entry_points]
fps_config =
    fps_uvicorn_config = fps_uvicorn.config

console_scripts =
    fps-uvicorn = fps_uvicorn.cli:app
