[build-system]
requires = [
    "hatchling>=1.9.0",
]
build-backend = "hatchling.build"

[project]
name = "fps-uvicorn"
dynamic = [
    "version",
]
description = "A uvicorn plugin for FPS"
readme = "README.md"
license = ""
requires-python = ">=3.7"
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
keywords = [
    "fastapi",
    "fps",
    "pluggy",
    "plugins",
    "server",
    "uvicorn",
]
dependencies = [
    "fps",
    "uvicorn",
]

[project.scripts]
fps-uvicorn = "fps_uvicorn.cli:app"

[project.entry-points.fps_config]
fps_uvicorn_config = "fps_uvicorn.config"

[project.urls]
Homepage = "https://github.com/jupyter-server/fps"

[tool.hatch.version]
path = "fps_uvicorn/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/fps_uvicorn",
]

[tool.check-manifest]
ignore = [
    ".*",
]

[tool.jupyter-releaser]
skip = [
    "check-links",
]
